# white-hole

./: .gitignore  README.md
white-hole/: .ghc.environment.x86_64-linux-8.6.5  README.md  hie.yml  white-hole.cabal
white-hole-pl/: README.md
white-hole-pl/src/: load.pl  run.pl
white-hole-pl/src/Db/: dbOperations.pl
white-hole-pl/src/Operations/: interface_operations.pl  movie_interface_operations.pl  movie_operations.pl  serie_interface_operations.pl  serie_operations.pl  user_operations.pl  util.pl
white-hole/.stack-work/: stack.sqlite3
white-hole/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
white-hole/src/: Main.hs
white-hole/src/Db/: Configure.hs  Operations.hs  configure.hs.save
white-hole/src/Entities/: Movie.hs  Rating.hs  Serie.hs  User.hs
white-hole/src/Operations/: InterfaceOperations.hs  MovieInterfaceOperations.hs  MovieOperations.hs  SerieInterfaceOperations.hs  SerieOperations.hs  UserOperations.hs  UtilOperations.hs
